# moon

./: Cargo.toml  README.md
compiler/bytecode/: Cargo.toml
compiler/bytecode/src/: compiler.rs  instr.rs  lib.rs  module.rs
compiler/core/: Cargo.toml
compiler/core/src/: error.rs  lib.rs  source.rs  span.rs
compiler/core/src/ast/: mod.rs
compiler/core/src/eval/: mod.rs
compiler/core/src/lexer/: mod.rs
compiler/core/src/parser/: mod.rs
compiler/core/tests/: mvp.rs
compiler/interpreter/: Cargo.toml
compiler/interpreter/src/: env.rs  error.rs  eval.rs  lib.rs  value.rs
compiler/interpreter/tests/: mvp.rs
compiler/lsp/: Cargo.toml
compiler/lsp/src/: main.rs
compiler/runtime/: Cargo.toml
compiler/runtime/src/: heap.rs  lib.rs  value.rs
compiler/typechecker/: Cargo.toml
compiler/typechecker/src/: env.rs  error.rs  lib.rs  types.rs
compiler/typechecker/tests/: typechecker.rs
compiler/vm/: Cargo.toml
compiler/vm/src/: error.rs  lib.rs  vm.rs
compiler/vm/tests/: vm.rs
examples/: hello.moon
learning/: README.md
learning/steps/: 00-vision.md  01-repo-layout.md  02-spans-and-source.md  03-ast.md  04-lexer.md  05-parser.md  06-interpreter.md  07-cli.md  08-tests-and-examples.md  09-next-steps.md  09-typechecker.md  10-runtime-and-gc.md  11-bytecode-and-vm.md  12-next-steps.md  13-language-server.md  14-closures.md
src/: main.rs
